Code cleanup; paths;...